--- a/main.yml
+++ b/main.yml
@@ -9,11 +9,25 @@
   
   - include_vars: main.yml
 
-  - name: debug
+  - name: Debug start
     debug:
       msg: "Hello"
 
-  - name: Create DNAC Site
+  - name: Query DNAC Sites
+    cisco.dnac.site_create:
+      dnac_host: "{{ dnac_host}}"
+      dnac_username: "{{ dnac_username }}"
+      dnac_password: "{{ dnac_password }}"
+      dnac_verify: no
+      dnac_port: 443
+      dnac_version: "2.2.3.3"
+      dnac_debug: yes
+    register: _sites
+  - name: Debug start
+    debug:
+      var: _sites
+
+  - name: Create DNAC Sites
     cisco.dnac.site_create:
       dnac_host: "{{ dnac_host}}"
       dnac_username: "{{ dnac_username }}"
