--- a/main.yml
+++ b/main.yml
@@ -9,10 +9,6 @@
   
   - include_vars: main.yml
 
-  - name: Debug start
-    debug:
-      msg: "Hello"
-
   - name: Query DNAC Sites
     cisco.dnac.site_info:
       dnac_host: "{{ dnac_host}}"
@@ -44,7 +40,20 @@
       var: _networks
 
 
+  - name: Query DNAC Discovery
+    cisco.dnac.discovery_info:
+      dnac_host: "{{ dnac_host}}"
+      dnac_username: "{{ dnac_username }}"
+      dnac_password: "{{ dnac_password }}"
+      dnac_verify: "{{ dnac_verify }}"
+      dnac_port: "{{ dnac_port }}"
+      dnac_version: "{{ dnac_version }}"
+      dnac_debug: "{{ dnac_debug }}"
+    register: _discovery
 
+  - name: Debug DNAC Discovery query
+    debug:
+      var: _discovery
 
 
 #   - name: Create DNAC Sites
