--- a/main.yml
+++ b/main.yml
@@ -39,9 +39,8 @@
     debug:
       var: _networks
 
-
-  - name: Query DNAC Discovery
-    cisco.dnac.discovery_info:
+  - name: Query DNAC App Policies
+    cisco.dnac.network_info:
       dnac_host: "{{ dnac_host}}"
       dnac_username: "{{ dnac_username }}"
       dnac_password: "{{ dnac_password }}"
@@ -49,11 +48,30 @@
       dnac_port: "{{ dnac_port }}"
       dnac_version: "{{ dnac_version }}"
       dnac_debug: "{{ dnac_debug }}"
-    register: _discovery
+    register: _app_policies
 
-  - name: Debug DNAC Discovery query
+  - name: Debug DNAC App Policies query
     debug:
-      var: _discovery
+      var: _app_policies
+
+
+
+
+  # - name: Query DNAC Discovery
+  #   cisco.dnac.discovery_info:
+  #     dnac_host: "{{ dnac_host}}"
+  #     dnac_username: "{{ dnac_username }}"
+  #     dnac_password: "{{ dnac_password }}"
+  #     dnac_verify: "{{ dnac_verify }}"
+  #     dnac_port: "{{ dnac_port }}"
+  #     dnac_version: "{{ dnac_version }}"
+  #     dnac_debug: "{{ dnac_debug }}"
+  #     id: ?
+  #   register: _discovery
+
+  # - name: Debug DNAC Discovery query
+  #   debug:
+  #     var: _discovery
 
 
 #   - name: Create DNAC Sites
