--- a/main.yml
+++ b/main.yml
@@ -54,24 +54,20 @@
     debug:
       var: _app_policies
 
+  - name: Query DNAC Discovery
+    cisco.dnac.discovery:
+      dnac_host: "{{ dnac_host}}"
+      dnac_username: "{{ dnac_username }}"
+      dnac_password: "{{ dnac_password }}"
+      dnac_verify: "{{ dnac_verify }}"
+      dnac_port: "{{ dnac_port }}"
+      dnac_version: "{{ dnac_version }}"
+      dnac_debug: "{{ dnac_debug }}"
+    register: _discovery
 
-
-
-  # - name: Query DNAC Discovery
-  #   cisco.dnac.discovery_info:
-  #     dnac_host: "{{ dnac_host}}"
-  #     dnac_username: "{{ dnac_username }}"
-  #     dnac_password: "{{ dnac_password }}"
-  #     dnac_verify: "{{ dnac_verify }}"
-  #     dnac_port: "{{ dnac_port }}"
-  #     dnac_version: "{{ dnac_version }}"
-  #     dnac_debug: "{{ dnac_debug }}"
-  #     id: ?
-  #   register: _discovery
-
-  # - name: Debug DNAC Discovery query
-  #   debug:
-  #     var: _discovery
+  - name: Debug DNAC Discovery query
+    debug:
+      var: _discovery
 
 
 #   - name: Create DNAC Sites
