--- a/main.yml
+++ b/main.yml
@@ -114,20 +114,20 @@
   #   debug:
   #     var: _device_details
 
-  # - name: Query DNAC Network Device query
-  #   cisco.dnac.network_device_info:
-  #     dnac_host: "{{ dnac_host}}"
-  #     dnac_username: "{{ dnac_username }}"
-  #     dnac_password: "{{ dnac_password }}"
-  #     dnac_verify: "{{ dnac_verify }}"
-  #     dnac_port: "{{ dnac_port }}"
-  #     dnac_version: "{{ dnac_version }}"
-  #     dnac_debug: "{{ dnac_debug }}"
-  #   register: _network_device
+  - name: Query DNAC Network Device query
+    cisco.dnac.network_device_info:
+      dnac_host: "{{ dnac_host}}"
+      dnac_username: "{{ dnac_username }}"
+      dnac_password: "{{ dnac_password }}"
+      dnac_verify: "{{ dnac_verify }}"
+      dnac_port: "{{ dnac_port }}"
+      dnac_version: "{{ dnac_version }}"
+      dnac_debug: "{{ dnac_debug }}"
+    register: _network_device
 
-  # - name: Debug DNAC Network Device query
-  #   debug:
-  #     var: _network_device
+  - name: Debug DNAC Network Device query
+    debug:
+      var: _network_device
 
   # - name: Query DNAC Wireless Profile query
   #   cisco.dnac.wireless_profile_info:
