--- a/main.yml
+++ b/main.yml
@@ -129,20 +129,20 @@
     debug:
       var: _network_device
 
-  # - name: Query DNAC Wireless Profile query
-  #   cisco.dnac.wireless_profile_info:
-  #     dnac_host: "{{ dnac_host}}"
-  #     dnac_username: "{{ dnac_username }}"
-  #     dnac_password: "{{ dnac_password }}"
-  #     dnac_verify: "{{ dnac_verify }}"
-  #     dnac_port: "{{ dnac_port }}"
-  #     dnac_version: "{{ dnac_version }}"
-  #     dnac_debug: "{{ dnac_debug }}"
-  #   register: _wireless_profile
+  - name: Query DNAC Wireless Profile query
+    cisco.dnac.wireless_profile_info:
+      dnac_host: "{{ dnac_host}}"
+      dnac_username: "{{ dnac_username }}"
+      dnac_password: "{{ dnac_password }}"
+      dnac_verify: "{{ dnac_verify }}"
+      dnac_port: "{{ dnac_port }}"
+      dnac_version: "{{ dnac_version }}"
+      dnac_debug: "{{ dnac_debug }}"
+    register: _wireless_profile
 
-  # - name: Debug DNAC Wireless Profile query
-  #   debug:
-  #     var: _wireless_profile
+  - name: Debug DNAC Wireless Profile query
+    debug:
+      var: _wireless_profile
 
   - name: Query DNAC Event Subscription query
     cisco.dnac.event_subscription_info:
@@ -158,8 +158,6 @@
   - name: Debug DNAC Event Subscription query
     debug:
       var: _device_details
-
-
 
 #   - name: Create DNAC Sites
 #     cisco.dnac.site_create:
