--- a/main.yml
+++ b/main.yml
@@ -99,20 +99,20 @@
     debug:
       var: _configuration_template
 
-  # - name: Query DNAC Device Details query
-  #   cisco.dnac.device_details_info:
-  #     dnac_host: "{{ dnac_host}}"
-  #     dnac_username: "{{ dnac_username }}"
-  #     dnac_password: "{{ dnac_password }}"
-  #     dnac_verify: "{{ dnac_verify }}"
-  #     dnac_port: "{{ dnac_port }}"
-  #     dnac_version: "{{ dnac_version }}"
-  #     dnac_debug: "{{ dnac_debug }}"
-  #   register: _device_details
+  - name: Query DNAC Device Details query
+    cisco.dnac.device_details_info:
+      dnac_host: "{{ dnac_host}}"
+      dnac_username: "{{ dnac_username }}"
+      dnac_password: "{{ dnac_password }}"
+      dnac_verify: "{{ dnac_verify }}"
+      dnac_port: "{{ dnac_port }}"
+      dnac_version: "{{ dnac_version }}"
+      dnac_debug: "{{ dnac_debug }}"
+    register: _device_details
 
-  # - name: Debug DNAC Device Details query
-  #   debug:
-  #     var: _device_details
+  - name: Debug DNAC Device Details query
+    debug:
+      var: _device_details
 
   - name: Query DNAC Network Device query
     cisco.dnac.network_device_info:
@@ -129,20 +129,20 @@
     debug:
       var: _network_device
 
-  - name: Query DNAC Wireless Profile query
-    cisco.dnac.wireless_profile_info:
-      dnac_host: "{{ dnac_host}}"
-      dnac_username: "{{ dnac_username }}"
-      dnac_password: "{{ dnac_password }}"
-      dnac_verify: "{{ dnac_verify }}"
-      dnac_port: "{{ dnac_port }}"
-      dnac_version: "{{ dnac_version }}"
-      dnac_debug: "{{ dnac_debug }}"
-    register: _wireless_profile
+  # - name: Query DNAC Wireless Profile query
+  #   cisco.dnac.wireless_profile_info:
+  #     dnac_host: "{{ dnac_host}}"
+  #     dnac_username: "{{ dnac_username }}"
+  #     dnac_password: "{{ dnac_password }}"
+  #     dnac_verify: "{{ dnac_verify }}"
+  #     dnac_port: "{{ dnac_port }}"
+  #     dnac_version: "{{ dnac_version }}"
+  #     dnac_debug: "{{ dnac_debug }}"
+  #   register: _wireless_profile
 
-  - name: Debug DNAC Wireless Profile query
-    debug:
-      var: _wireless_profile
+  # - name: Debug DNAC Wireless Profile query
+  #   debug:
+  #     var: _wireless_profile
 
   - name: Query DNAC Event Subscription query
     cisco.dnac.event_subscription_info:
