--- a/main.yml
+++ b/main.yml
@@ -129,17 +129,17 @@
     debug:
       var: _device_details
 
-#   - name: Create DNAC Sites
-#     cisco.dnac.site_create:
-#       dnac_host: "{{ dnac_host}}"
-#       dnac_username: "{{ dnac_username }}"
-#       dnac_password: "{{ dnac_password }}"
-#       dnac_verify: "{{ dnac_verify }}"
-#       dnac_port: "{{ dnac_port }}"
-#       dnac_version: "{{ dnac_version }}"
-#       dnac_debug: "{{ dnac_debug }}"
-#       site:
-#         area:
-#           name: Portugal
-#           parentName: Global
-# #   loop: "{{ sites }}"    
+  - name: Create DNAC Sites
+    cisco.dnac.site_create:
+      dnac_host: "{{ dnac_host}}"
+      dnac_username: "{{ dnac_username }}"
+      dnac_password: "{{ dnac_password }}"
+      dnac_verify: "{{ dnac_verify }}"
+      dnac_port: "{{ dnac_port }}"
+      dnac_version: "{{ dnac_version }}"
+      dnac_debug: "{{ dnac_debug }}"
+      site:
+        area:
+          name: Portugal
+          parentName: Global
+#   loop: "{{ sites }}"    
