--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,8 +1,8 @@
 ---
 
 dnac_host: "{{ cisco_dnac_endpoint | default('sandboxdnac2.cisco.com') }}"
-dnac_username: "{{ cisco_dnac_user | default('devnetuser') }}"
-dnac_password: "{{ cisco_dnac_password | default('Cisco123!') }}"
+dnac_username: "{{ ansible_user | default('devnetuser') }}"
+dnac_password: "{{ ansible_password | default('Cisco123!') }}"
 dnac_verify: no
 dnac_port: 443
 dnac_version: "2.2.3.3"
