--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,6 +1,7 @@
 ---
 
-dnac_host: "{{ cisco_dnac_endpoint | default('sandboxdnac2.cisco.com') }}"
+# dnac_host: "{{ cisco_dnac_endpoint | default('sandboxdnac2.cisco.com') }}"
+dnac_host: "sandboxdnac2.cisco.com"
 dnac_username: "{{ ansible_user | default('devnetuser') }}"
 dnac_password: "{{ ansible_password | default('Cisco123!') }}"
 dnac_verify: no
