--- a/main.yml
+++ b/main.yml
@@ -7,20 +7,20 @@
   vars_files: vars/main.yml
   tasks:
 
-  # - name: Query DNAC Sites
-  #   cisco.dnac.site_info:
-  #     dnac_host: "{{ dnac_host}}"
-  #     dnac_username: "{{ dnac_username }}"
-  #     dnac_password: "{{ dnac_password }}"
-  #     dnac_verify: "{{ dnac_verify }}"
-  #     dnac_port: "{{ dnac_port }}"
-  #     dnac_version: "{{ dnac_version }}"
-  #     dnac_debug: "{{ dnac_debug }}"
-  #   register: _sites
+  - name: Query DNAC Sites
+    cisco.dnac.site_info:
+      dnac_host: "{{ dnac_host}}"
+      dnac_username: "{{ dnac_username }}"
+      dnac_password: "{{ dnac_password }}"
+      dnac_verify: "{{ dnac_verify }}"
+      dnac_port: "{{ dnac_port }}"
+      dnac_version: "{{ dnac_version }}"
+      dnac_debug: "{{ dnac_debug }}"
+    register: _sites
 
-  # - name: Debug DNAC Sites query
-  #   debug:
-  #     var: _sites
+  - name: Debug DNAC Sites query
+    debug:
+      var: _sites
 
   - name: Query DNAC Network
     cisco.dnac.network_info:
