--- a/main.yml
+++ b/main.yml
@@ -4,8 +4,12 @@
   hosts: localhost
   connection: local
   gather_facts: false
-  vars_files: vars/main.yml
+  vars_files: main.yml
   tasks:
+
+  - name: Debug
+    ansible.builtin.debug:
+      msg: "test {{ dnac_host }}"
 
   - name: Query DNAC Sites
     cisco.dnac.site_info:
