--- a/main.yml
+++ b/main.yml
@@ -17,9 +17,9 @@
       dnac_username: "{{ dnac_username }}"
       dnac_password: "{{ dnac_password }}"
       dnac_verify: "{{ dnac_verify }}"
-      # dnac_port: "{{ dnac_port }}"
+      dnac_port: "{{ dnac_port }}"
       # dnac_version: "{{ dnac_version }}"
-      # dnac_debug: "{{ dnac_debug }}"
+      dnac_debug: "{{ dnac_debug }}"
     register: _sites
 
   - name: Debug DNAC Sites query
