--- a/main.yml
+++ b/main.yml
@@ -18,7 +18,7 @@
       dnac_password: "{{ dnac_password }}"
       dnac_verify: "{{ dnac_verify }}"
       dnac_port: "{{ dnac_port }}"
-      # dnac_version: "{{ dnac_version }}"
+      dnac_version: "{{ dnac_version }}"
       dnac_debug: "{{ dnac_debug }}"
     register: _sites
 
