--- a/main.yml
+++ b/main.yml
@@ -112,20 +112,20 @@
     debug:
       var: _network_device
 
-  - name: Query DNAC Event Subscription query
-    cisco.dnac.event_subscription_info:
-      dnac_host: "{{ dnac_host}}"
-      dnac_username: "{{ dnac_username }}"
-      dnac_password: "{{ dnac_password }}"
-      dnac_verify: "{{ dnac_verify }}"
-      dnac_port: "{{ dnac_port }}"
-      # dnac_version: "{{ dnac_version }}"
-      dnac_debug: "{{ dnac_debug }}"
-    register: _subscription_details
+  # - name: Query DNAC Event Subscription query
+  #   cisco.dnac.event_subscription_info:
+  #     dnac_host: "{{ dnac_host}}"
+  #     dnac_username: "{{ dnac_username }}"
+  #     dnac_password: "{{ dnac_password }}"
+  #     dnac_verify: "{{ dnac_verify }}"
+  #     dnac_port: "{{ dnac_port }}"
+  #     # dnac_version: "{{ dnac_version }}"
+  #     dnac_debug: "{{ dnac_debug }}"
+  #   register: _subscription_details
 
-  - name: Debug DNAC Event Subscription query
-    debug:
-      var: _subscription_details
+  # - name: Debug DNAC Event Subscription query
+  #   debug:
+  #     var: _subscription_details
 
   - name: Create DNAC Sites
     cisco.dnac.site_create:
